@startuml
!theme mono

class ClassifierConfigSingleton {
    - _instance : ClassifierConfigSingleton
    - preprocessing_features : list
    - embeddings : list
    - models : list
    - data_folder_path : str
    - ticket_summary : str
    - interaction_content : str
    - classification_column : str
    - type_columns : list
    - type_columns_names : list

    + __new__(cls) : ClassifierConfigSingleton
}


class Client {
    - config_manager: ClassifierConfigSingleton
}

Client o-- ClassifierConfigSingleton 
ClassifierConfigSingleton  --> "1" ClassifierConfigSingleton  : <<Singleton>>

@enduml